--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=process.env.port react-scripts start",
     "build": "react-scripts build && cp -r build/* ../public/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
